# InteractiveDrawing

./: .gitignore  CMakeLists.txt  DrawableActor.cpp  DrawableActor.h  DrawablesContextMenu.h  DrawablesInit.h  DrawablesScene.cpp  DrawablesScene.h  MovableActor.cpp  MovableActor.h  README.md  SceneMapper.h  TextActor.h  drawables.cpp  drawables.h  interactive_drawing.qrc  main.cpp  renderarea.cpp  renderarea.h  window.cpp  window.h
